fixed some labels in B vectors regression script

--- a/analysis/CellO_training_data_eda_Serhiy/B-Regression.ipynb
+++ b/analysis/CellO_training_data_eda_Serhiy/B-Regression.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "(4293, 55904)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "(5900, 258)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
      "text": [
       "5900 genes in Z matrix\n",
       "100.0% of them in matrix Y\n",
-      "10.55% of them in matrix Y\n"
+      "10.55% of Y matrix genes in Z\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "z_in_y = Z_genes.isin(Y_df.columns).sum()\n",
     "y_in_z = Y_df.columns.isin(Z_genes).sum()\n",
     "print(f'{z_in_y * 100 / len(Z_genes)}% of them in matrix Y')\n",
-    "print(f'{y_in_z * 100 / len(Y_df.columns):0.2f}% of them in matrix Y')"
+    "print(f'{y_in_z * 100 / len(Y_df.columns):0.2f}% of Y matrix genes in Z')"
    ]
   },
   {
@@ -217,7 +217,7 @@
     }
    ],
    "source": [
-    "# store some samples associated with target embeddings\n",
+    "# store samples associated with target embeddings\n",
     "target_y_vectors = Y_df.iloc[target_b_inds].values\n",
     "target_y_vectors.shape"
    ]
