--- a/analysis/CellO_training_data_eda_Serhiy/B-Regression-On_test.ipynb
+++ b/analysis/CellO_training_data_eda_Serhiy/B-Regression-On_test.ipynb
@@ -31,8 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The goal of this project is to find B vectors(embedding) having trained Z matrix and observation data\n",
-    "### First let's try to find back the random set of B vectors"
+    "## The goal of this project is to find B vectors(embedding) having trained Z matrix and observation data"
    ]
   },
   {
