--- a/analysis/CellO_training_data_eda_Serhiy/B-Regression-On_test.ipynb
+++ b/analysis/CellO_training_data_eda_Serhiy/B-Regression-On_test.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The goal of this project is to find B vectors(embedding) having trained Z matrix and observation data"
+    "## The goal of this project is to find B vectors(embeddings) having trained Z matrix and observation data"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Not all genes from original data(Y) present in Z matrix. Rest of the genes were droped by PLIER as less insignificant\n",
+    "#### Not all genes from original data(Y) present in Z matrix. Rest of the genes were droped by PLIER as less significant\n",
     "Let's select only 5900 genes that present in matrix Z. Z is a vertical matrix with columns matching the dimensionality of our embedding vector and number of rows matching the number of genes used"
    ]
   },
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading B matrix and sample some random vectors that we want to find back"
+    "#### Loading B matrix built on train data"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using regression to find the B that will produce vector close to test Y"
+    "## Using regression to find the B that will produce vectors close to test Y"
    ]
   },
   {
@@ -501,230 +501,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_size = 5\n",
-    "\n",
     "test_b_vectors = b_test.T\n",
-    "test_samples = test_Y_df.index.values\n",
-    "\n",
-    "random_test_inds = random.choices(range(len(test_b_vectors)), k=subset_size)\n",
-    "random_test_embeddings = test_b_vectors[random_test_inds]\n",
-    "random_test_samples = test_samples[random_test_inds]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Compute disstance between the test sample embedding and all train examples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3868, 356)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B_mat = B_df.values\n",
-    "B_mat.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3868, 5)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_b_to_train_samples_dists = B_mat.dot(random_test_embeddings.T)\n",
-    "test_b_to_train_samples_dists.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SRX1166217</th>\n",
-       "      <th>SRX475239</th>\n",
-       "      <th>SRX867085</th>\n",
-       "      <th>SRX867094</th>\n",
-       "      <th>SRX1433442</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>SRX890545</th>\n",
-       "      <td>-0.663056</td>\n",
-       "      <td>-1.533700</td>\n",
-       "      <td>-2.722773</td>\n",
-       "      <td>-3.097688</td>\n",
-       "      <td>4.965366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SRX1067711</th>\n",
-       "      <td>-1.114241</td>\n",
-       "      <td>-1.442315</td>\n",
-       "      <td>-2.390478</td>\n",
-       "      <td>-2.333446</td>\n",
-       "      <td>4.870961</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SRX1067710</th>\n",
-       "      <td>-1.134255</td>\n",
-       "      <td>-0.953455</td>\n",
-       "      <td>-1.871949</td>\n",
-       "      <td>-1.702005</td>\n",
-       "      <td>3.960027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SRX762971</th>\n",
-       "      <td>-1.647292</td>\n",
-       "      <td>-1.952693</td>\n",
-       "      <td>1.847824</td>\n",
-       "      <td>1.204645</td>\n",
-       "      <td>0.256023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SRX762970</th>\n",
-       "      <td>-1.821974</td>\n",
-       "      <td>-1.922451</td>\n",
-       "      <td>3.405054</td>\n",
-       "      <td>2.323392</td>\n",
-       "      <td>0.038472</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SRX1166217  SRX475239  SRX867085  SRX867094  SRX1433442\n",
-       "SRX890545    -0.663056  -1.533700  -2.722773  -3.097688    4.965366\n",
-       "SRX1067711   -1.114241  -1.442315  -2.390478  -2.333446    4.870961\n",
-       "SRX1067710   -1.134255  -0.953455  -1.871949  -1.702005    3.960027\n",
-       "SRX762971    -1.647292  -1.952693   1.847824   1.204645    0.256023\n",
-       "SRX762970    -1.821974  -1.922451   3.405054   2.323392    0.038472"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dists_df = pd.DataFrame(test_b_to_train_samples_dists)\n",
-    "dists_df.columns = random_test_samples\n",
-    "dists_df.index = train_samples\n",
-    "dists_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test sample: SRX1166217. cell types: ['nongranular leukocyte', 'lymphocyte', 'peripheral blood mononuclear cell', 'mononuclear cell', 'group 2 innate lymphoid cell', 'single nucleate cell', 'nucleate cell', 'cell', 'innate lymphoid cell', 'leukocyte', 'blood cell', 'hematopoietic cell', 'animal cell', 'circulating cell', 'eukaryotic cell', 'somatic cell', 'native cell', 'motile cell']\n",
-      "2 closest train samples:\n",
-      "\t train sample: SRX2767761. cell types: ['bone marrow cell', 'bone marrow hematopoietic cell', 'bone cell', 'myeloid cell', 'cell', 'leukocyte', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'granulocyte', 'eukaryotic cell', 'somatic cell', 'native cell', 'motile cell']\n",
-      "\t train sample: SRX3098560. cell types: ['monocyte', 'nongranular leukocyte', 'mononuclear cell', 'myeloid cell', 'single nucleate cell', 'nucleate cell', 'cell', 'leukocyte', 'precursor cell', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'eukaryotic cell', 'somatic cell', 'CD14-positive monocyte', 'native cell', 'motile cell']\n",
-      "---\n",
-      "\n",
-      "test sample: SRX475239. cell types: ['cell', 'non-terminally differentiated cell', 'osteoblast', 'precursor cell', 'animal cell', 'eukaryotic cell', 'somatic cell', 'bone cell', 'native cell', 'connective tissue cell']\n",
-      "2 closest train samples:\n",
-      "\t train sample: SRX3399212. cell types: ['cell', 'leukocyte', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'granulocyte', 'eukaryotic cell', 'somatic cell', 'neutrophil', 'myeloid cell', 'native cell', 'motile cell']\n",
-      "\t train sample: SRX3399241. cell types: ['cell', 'leukocyte', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'granulocyte', 'eukaryotic cell', 'somatic cell', 'neutrophil', 'myeloid cell', 'native cell', 'motile cell']\n",
-      "---\n",
-      "\n",
-      "test sample: SRX867085. cell types: ['male gamete', 'ciliated cell', 'cell', 'eukaryotic cell', 'germ cell', 'haploid cell', 'germ line cell', 'gamete', 'native cell', 'sperm', 'animal cell', 'male germ cell', 'motile cell']\n",
-      "2 closest train samples:\n",
-      "\t train sample: SRX2193270. cell types: ['nucleate cell', 'cell', 'innate lymphoid cell', 'group 1 innate lymphoid cell', 'leukocyte', 'nongranular leukocyte', 'hematopoietic cell', 'lymphocyte', 'animal cell', 'eukaryotic cell', 'mononuclear cell', 'somatic cell', 'single nucleate cell', 'native cell', 'natural killer cell', 'motile cell']\n",
-      "\t train sample: SRX3399300. cell types: ['monocyte', 'nongranular leukocyte', 'peripheral blood mononuclear cell', 'mononuclear cell', 'myeloid cell', 'single nucleate cell', 'nucleate cell', 'cell', 'leukocyte', 'precursor cell', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'circulating cell', 'eukaryotic cell', 'somatic cell', 'non-classical monocyte', 'native cell', 'motile cell']\n",
-      "---\n",
-      "\n",
-      "test sample: SRX867094. cell types: ['male gamete', 'ciliated cell', 'cell', 'eukaryotic cell', 'germ cell', 'haploid cell', 'germ line cell', 'gamete', 'native cell', 'sperm', 'animal cell', 'male germ cell', 'motile cell']\n",
-      "2 closest train samples:\n",
-      "\t train sample: SRX2193270. cell types: ['nucleate cell', 'cell', 'innate lymphoid cell', 'group 1 innate lymphoid cell', 'leukocyte', 'nongranular leukocyte', 'hematopoietic cell', 'lymphocyte', 'animal cell', 'eukaryotic cell', 'mononuclear cell', 'somatic cell', 'single nucleate cell', 'native cell', 'natural killer cell', 'motile cell']\n",
-      "\t train sample: SRX3399235. cell types: ['monocyte', 'nongranular leukocyte', 'classical monocyte', 'peripheral blood mononuclear cell', 'defensive cell', 'mononuclear cell', 'phagocyte', 'myeloid cell', 'single nucleate cell', 'nucleate cell', 'cell', 'leukocyte', 'precursor cell', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'circulating cell', 'stuff accumulating cell', 'eukaryotic cell', 'somatic cell', 'native cell', 'motile cell']\n",
-      "---\n",
-      "\n",
-      "test sample: SRX1433442. cell types: ['monocyte', 'nongranular leukocyte', 'peripheral blood mononuclear cell', 'mononuclear cell', 'myeloid cell', 'single nucleate cell', 'nucleate cell', 'cell', 'leukocyte', 'precursor cell', 'blood cell', 'hematopoietic cell', 'myeloid leukocyte', 'animal cell', 'circulating cell', 'eukaryotic cell', 'somatic cell', 'CD14-positive monocyte', 'native cell', 'motile cell']\n",
-      "2 closest train samples:\n",
-      "\t train sample: SRX844279. cell types: ['cell', 'neural cell', 'glial cell (sensu Vertebrata)', 'radial glial cell', 'glial cell', 'animal cell', 'eukaryotic cell', 'somatic cell', 'native cell', 'neuron associated cell']\n",
-      "\t train sample: SRX1280765. cell types: ['embryonic cell', 'cell', 'early embryonic cell', 'eukaryotic cell', 'native cell', 'animal cell']\n",
-      "---\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "n_closest = 2\n",
-    "\n",
-    "for test_sample in random_test_samples:\n",
-    "    print(f'test sample: {test_sample}. cell types: {sample2types[test_sample]}')\n",
-    "    print(f'{n_closest} closest train samples:')\n",
-    "    \n",
-    "    closest = dists_df[test_sample].nsmallest(n_closest).index.values\n",
-    "    for c in closest:\n",
-    "        print(f'\\t train sample: {c}. cell types: {sample2types[c]}')\n",
-    "\n",
-    "    print('---\\n')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plotting"
+    "test_samples = test_Y_df.index.values"
    ]
   },
   {
@@ -858,7 +648,12 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1242,9 +1037,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-bio]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-.conda-bio-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1256,7 +1051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
