--- a/analysis/EDA_Julian/Logistic Regression celltype classifiers.ipynb
+++ b/analysis/EDA_Julian/Logistic Regression celltype classifiers.ipynb
@@ -261,18 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(684, 258)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'B_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-de986089cdb9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest_Y_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mB_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mB_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_egs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mtest_Y_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'B_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -425,30 +426,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_knn = scaler.transform(test_Y_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████| 684/684 [40:39<00:00,  3.57s/it]\n"
+     "ename": "NameError",
+     "evalue": "name 'test_Y_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-1ac8249cdbfd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mknnpred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mdatapoint\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_Y_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mnormalize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mmost_specific\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_Y_df' is not defined"
      ]
     }
    ],
    "source": [
     "from tqdm import tqdm\n",
     "knnpred = []\n",
-    "for datapoint in tqdm(test_knn):\n",
+    "for datapoint in tqdm(test_Y_df):\n",
     "    normalize = False\n",
     "    most_specific = True\n",
     "    sortby_pval = False\n",
@@ -475,7 +471,7 @@
     "    for i in range(0,len(test_data)):\n",
     "        cell_types = knnpred[i]\n",
     "        if(cell_type in cell_types.index):\n",
-    "            pval = cell_types.loc[cell_type][\"p_value\"]\n",
+    "            pval = cell_types.xs(cell_type,, level=1)[\"p_value\"]\n",
     "            \n",
     "            if(pval <= 0.05):\n",
     "                prediction += [1]\n",
@@ -3810,152 +3806,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>celltype</th>\n",
-       "      <th>precision score</th>\n",
-       "      <th>recall score</th>\n",
-       "      <th>f score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>B cell</td>\n",
-       "      <td>0.722222</td>\n",
-       "      <td>0.684211</td>\n",
-       "      <td>0.351351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CD14-positive monocyte</td>\n",
-       "      <td>0.488889</td>\n",
-       "      <td>0.785714</td>\n",
-       "      <td>0.301370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CD14-positive, CD16-negative classical monocyte</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>CD141-positive myeloid dendritic cell</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CD1c-positive myeloid dendritic cell</td>\n",
-       "      <td>0.769231</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>0.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>type B pancreatic cell</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.400000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>type II pneumocyte</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>vascular associated smooth muscle cell</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.428571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>vein endothelial cell</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>visceral muscle cell</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.428571</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>181 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            celltype  precision score  \\\n",
-       "0                                             B cell         0.722222   \n",
-       "1                             CD14-positive monocyte         0.488889   \n",
-       "2    CD14-positive, CD16-negative classical monocyte         0.000000   \n",
-       "3              CD141-positive myeloid dendritic cell         0.000000   \n",
-       "4               CD1c-positive myeloid dendritic cell         0.769231   \n",
-       "..                                               ...              ...   \n",
-       "176                           type B pancreatic cell         0.666667   \n",
-       "177                               type II pneumocyte         0.000000   \n",
-       "178           vascular associated smooth muscle cell         0.750000   \n",
-       "179                            vein endothelial cell         1.000000   \n",
-       "180                             visceral muscle cell         0.750000   \n",
-       "\n",
-       "     recall score   f score  \n",
-       "0        0.684211  0.351351  \n",
-       "1        0.785714  0.301370  \n",
-       "2        0.000000  0.000000  \n",
-       "3        0.000000  0.000000  \n",
-       "4        0.833333  0.400000  \n",
-       "..            ...       ...  \n",
-       "176      1.000000  0.400000  \n",
-       "177      0.000000  0.000000  \n",
-       "178      1.000000  0.428571  \n",
-       "179      1.000000  0.500000  \n",
-       "180      1.000000  0.428571  \n",
-       "\n",
-       "[181 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'report' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-07d3306fc65e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreport\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'report' is not defined"
+     ]
     }
    ],
    "source": [
