removed global variables

--- a/analysis/EDA_Julian/Logistic Regression celltype classifiers.ipynb
+++ b/analysis/EDA_Julian/Logistic Regression celltype classifiers.ipynb
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip uninstall cello_multiplier --yes\n",
-    "# !pip install -U git+https://github.com/Bishop-Laboratory/CellO-MultiPLIER.git@test"
+    "#!pip uninstall cello_multiplier --yes\n",
+    "#!pip install -U git+https://github.com/Bishop-Laboratory/CellO-MultiPLIER.git@test"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B_df, Z_df, labels, per_gene_mean, per_gene_std = cm.get_default_mats()"
+    "B_df, Z_df, labels, per_gene_mean, per_gene_std, train_dummies_specific, train_dummies_full = cm.get_default_mats()"
    ]
   },
   {
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x26e2660dc70>"
+       "<seaborn.axisgrid.FacetGrid at 0x1b305fdd160>"
       ]
      },
      "execution_count": 10,
@@ -409,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5219f7e30c7945abb15b9d579dade9ee",
+       "model_id": "43aad7da2cde41e58c15f0d46cbb55a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1222,7 +1222,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ff6ad0c30024132a6fa76f4e0af8237",
+       "model_id": "4cd2931e31d14a30b5a7bc80199494ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1341,7 +1341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a6d583256134f65b3a2bcef414151ce",
+       "model_id": "34aa9085af05445c97e0f68dc6f4cc2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1589,7 +1589,9 @@
     "            test_data,\n",
     "            samplenames, \n",
     "            most_specific, \n",
-    "            n_neighbours\n",
+    "            n_neighbours,\n",
+    "            train_dummies_specific,\n",
+    "            train_dummies_full\n",
     "        )\n"
    ]
   },
@@ -1629,7 +1631,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7636bd316ce4131ac0f364256a13dcc",
+       "model_id": "581f5efbd4964329b8316127702a3b68",
        "version_major": 2,
        "version_minor": 0
       },
