--- a/analysis/CellO_training_data_eda_Serhiy/Analysis.ipynb
+++ b/analysis/CellO_training_data_eda_Serhiy/Analysis.ipynb
@@ -14,6 +14,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/millerh1/projects/cancer-normal-transformer/analysis/CellO_training_data_eda_Serhiy'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -1679,9 +1700,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bio]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-bio-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1693,7 +1714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
